--- a/back/simple_storage/Scarb.toml
+++ b/back/simple_storage/Scarb.toml
@@ -14,3 +14,9 @@ sierra = true
 
 # Enable CASM codegen.
 casm = true
+
+[dev-dependencies]
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.24.0" }
+
+[scripts]
+test = "snforge test"
