--- a/backend/simple_storage/Scarb.toml
+++ b/backend/simple_storage/Scarb.toml
@@ -20,3 +20,6 @@ snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag 
 
 [scripts]
 test = "snforge test"
+
+[tool.snforge]
+fuzzer_runs = 1234
